# alpha-mcp

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
examples/: claude-desktop-config.json  cursor-mcp.json  hermes-config.yaml  openclaw-config.json
polymarket_alpha/: __init__.py  __main__.py  analysis.py  clob_authenticated.py  clob_public.py  config.py  gamma.py  gasless.py  meta.py  realtime_helpers.py  server.py  setup_guide.py  simulation.py  websocket.py
