[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-alpha"
version = "0.5.0"
description = "Make Polymarket completely native inside Hermes, OpenClaw, and other agents. Full discovery, trading, and gasless transactions with zero-guessing self-documentation."
# Documentation is provided exclusively through MCP tools for agents
# (get_clob_docs, get_gamma_docs, get_unified_sdk_guidance, polymarket_alpha_setup_guide, check_clob_auth, etc.).
# No static README.md or QUICKSTART.md files are shipped.
# Gasless/relayer features require RELAYER_API_KEY + PK (graceful degradation if absent).
# All core deps included; optional advanced low-level use via get_raw_relay_client.
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alpha MCP"}]
keywords = ["mcp", "polymarket", "hermes", "openclaw", "prediction-markets", "gasless", "relayer", "fastmcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastmcp>=3.2.0",
  "py-clob-client-v2>=1.0.0",
  "py-builder-relayer-client>=0.1.0",
  "py-builder-signing-sdk>=0.1.0",
  "polymarket-apis>=2.2.0",
  "pydantic>=2.5.0",
  "eth-account>=0.11.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
polymarket-alpha = "polymarket_alpha.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_alpha"]
