[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-alpha"
version = "0.5.0"
description = "Make Polymarket completely native inside Hermes, OpenClaw, and other agents. Full Gamma + CLOB + gasless + managed realtime WS + simulation + strategy cookbooks. 100+ tools. Minimal on-ramp README only — all deep documentation (including every official .md) delivered via native tool calls (get_polymarket_llms_txt, list_polymarket_docs, get_polymarket_doc)."
# Documentation philosophy: tiny installation README only. All real content (llms.txt + every referenced .md file, Gamma/CLOB guidance, workflows) is served live through callable tools so agents always get fresh info.
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alpha MCP"}]
keywords = ["mcp", "polymarket", "hermes", "openclaw", "prediction-markets", "gasless", "relayer", "fastmcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastmcp>=3.2.0",
  "py-clob-client-v2>=1.0.0",
  "py-builder-relayer-client>=0.1.0",
  "py-builder-signing-sdk>=0.1.0",
  "polymarket-apis>=2.2.0",
  "pydantic>=2.5.0",
  "eth-account>=0.11.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
polymarket-alpha = "polymarket_alpha.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_alpha"]
