[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-alpha"
version = "0.5.0"
description = "Make Polymarket completely native inside Hermes, OpenClaw, and other agents. Full Gamma + CLOB trading + managed realtime WS + simulation + strategy cookbooks + gasless (core via polymarket-apis; advanced relayer features optional). 100+ tools. All docs via native calls (llms.txt + full sitemap + get_polymarket_doc)."
# Core trading + most gasless works out of the box. Advanced relayer features (Safe deploy, low-level batches) are optional via `pip install "polymarket-alpha[gasless]"`.
# All deep documentation is delivered via native tools (get_polymarket_llms_txt + get_polymarket_sitemap + get_polymarket_doc).
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alpha MCP"}]
keywords = ["mcp", "polymarket", "hermes", "openclaw", "prediction-markets", "gasless", "relayer", "fastmcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastmcp>=3.2.0",
  "py-clob-client-v2>=1.0.0",
  "polymarket-apis>=2.2.0",
  "pydantic>=2.5.0",
  "eth-account>=0.11.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
# Advanced gasless / relayer features (Safe deployment, low-level batches).
# These packages are not always publicly installable. Core CLOB trading + most gasless
# operations work without them (via polymarket-apis).
gasless = [
  "py-builder-relayer-client>=0.1.0",
  "py-builder-signing-sdk>=0.1.0",
]

[project.scripts]
polymarket-alpha = "polymarket_alpha.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_alpha"]
